Switch back to Java 11 :s